--- a/teachers.html
+++ b/teachers.html
@@ -22,7 +22,7 @@
         <div class="w3-sidebar w3-bar-block w3-border-right " style="display:none; right:0;" id="mySidebar">
             
                 <button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
-                <a href="home.html" class="w3-bar-item w3-button">home</a>
+                <a href="index.html" class="w3-bar-item w3-button">home</a>
                 <a href="course.html" class="w3-bar-item w3-button">courses</a>
                 <a href="teachers.html" class="w3-bar-item w3-button">teachers</a>
                 
